devise gem installation

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -17,7 +17,7 @@
 
 .hero {
 	
-  background: image_url('hero.jpg') no-repeat center center fixed;
+  background: image_url('background2.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
