--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,14 @@
     </ul>
   </div>
 </nav>
+
+<% if notice.present? %>
+<p class= "alert alert-info"><%= notice %></p>
+<% end %>
+< if altert.present? %> 
+<p class ="alert altert-danger"><%= alert %></p>
+<% end %>
+
     <%= yield %>
   </body>
 </html>
