--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,4 +1,9 @@
+<br />
+
+  <div class="booyah-box col-10 offset-1">
 <h2>Change your password</h2>
+
+<br />
 
 <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
   <%= f.error_notification %>
@@ -16,9 +21,14 @@
     <%= f.input :password_confirmation, label: "Confirm your new password", required: true %>
   </div>
 
+  <br />
+
   <div class="form-actions">
-    <%= f.button :submit, "Change my password" %>
+    <%= f.button :submit, "Change my password" " btn btn_primary"%>
   </div>
 <% end %>
 
+<br />
+
 <%= render "devise/shared/links" %>
+</div>
