adding a show page for the courses db

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -82,3 +82,12 @@ body {
   padding: 2px 8px 2px 8px;
   margin: 10px;
 }
+
+.clr {
+  clear: both; 
+}
+
+.btn btn-success {
+color: #c9188e
+  
+}
