--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -8,10 +8,12 @@
     <h2>I'm an illusionist, Michael.</h2>
     <br />
   </div>
-    <%= link_to 'Learn More', '#', class: 'btn btn-success' %>
+ 
+    <%= link_to 'Learn More', courses_path, class: 'btn btn-success' %>
     <br /><br />
   </div>
 </div>
+
 
 </br>
 <div class="row feature text-center">
