--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -1,17 +1,17 @@
 <br/>
 <div class ="booyah-box col-10 offset-1">
-	 <h1 class="text-center"><%= @course.title %></h1>
+	 <h1 class="text-center"><%= @current_course %></h1>
 	 <br />
 	 <%= link_to 'Preview as student', course_path(@course), class: 'btn btn-warning float-right' %> 
 	 <div class= "text-center">
 	 	<br class="clr" />
-	 	<%= link_to 'Add new section...', new_instructor_course_section_path(@course), class: 'btn btn-primary btn-large' %>
+	 	<%= link_to 'Add new section...', new_instructor_course_section_path(current_course), class: 'btn btn-primary btn-large' %>
 	 </div>
 	  <ul>
-    <% @course.sections.each do |section| %>
+    <% current_course.sections.each do |section| %>
       <li>
         <%= section.title %>
-        <%= link_to 'New lesson', new_instructor_section_lesson_path(@course), class: 'float-right btn btn-primary btn-sm' %> 
+        <%= link_to 'New lesson', new_instructor_section_lesson_path(current_course), class: 'float-right btn btn-primary btn-sm' %> 
         <ul>
         	<% section.lessons.each do |lesson|%>
         	<li>
