--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -24,4 +24,17 @@
 <%= @course.description %>
 </div> 
 </div>
+
+<div class="col-2">
+	<% @course.section.each do |section| %>
+		<div class="section">
+		<%= section.title %> 
+	</div>
+	<% end %>
+</div>
+</div>
+
+
+
+
 </div>
