--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,7 +1,9 @@
-<br /> 
+<br />
 
-<div class="booyah-box col-10 offset-1"
-<h1><%= @course.title %></h1>
+<div class="booyah-box col-10 offset-1">
+
+<h1> <%= @course.title %> </h1>
+<%= @course.image %>
 <br />
 <div class="row">
 <div class="col-sm-4 col-12 text-center">
@@ -17,8 +19,6 @@
 <%= link_to "Administer", instructor_course_path(@course), class: 'btn btn-danger btn-large' %>
 <% end %>
 </div> 
-
-
 
 <div class= "col-sm-8 col-12">
 <%= @course.description %>
@@ -46,4 +46,3 @@
 
 
 
-</div>
