--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -1,8 +1,8 @@
 <br/>
 <div class ="booyah-box col-10 offset-1">
-	 <h1 class="text-center"><%= @current_course %></h1>
+	 <h1 class="text-center"><%= @current_course.title %></h1>
 	 <br />
-	 <%= link_to 'Preview as student', course_path(@course), class: 'btn btn-warning float-right' %> 
+	 <%= link_to 'Preview as student', course_path(current_course), class: 'btn btn-warning float-right' %> 
 	 <div class= "text-center">
 	 	<br class="clr" />
 	 	<%= link_to 'Add new section...', new_instructor_course_section_path(current_course), class: 'btn btn-primary btn-large' %>
@@ -16,6 +16,7 @@
         	<% section.lessons.each do |lesson|%>
         	<li>
         		<b> <%= lesson.title %></b>
+
         			-
         			<%= lesson.subtitle %>
         		</li>
