--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -3,7 +3,7 @@
 <div class="booyah-box col-10 offset-1">
 
 <h1> <%= @course.title %> </h1>
-<%= @course.image %>
+<img src="<%= @course.image.url %>">
 <br />
 <div class="row">
 <div class="col-sm-4 col-12 text-center">
