--- a/app/views/instructor/courses/new.html.erb
+++ b/app/views/instructor/courses/new.html.erb
@@ -7,6 +7,8 @@
     <%= f.input :cost %>
     <%= f.input :image %>
     <br />
+    <% puts "YOUR IN THE F BOOYAH BOX" 
+    <% puts f %>
     <%= f.submit "Create", class: 'btn btn-primary' %>
     <br />
   <% end %>
