--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -12,7 +12,9 @@
     <% current_course.sections.each do |section| %>
       <li>
         <%= section.title %>
-        <%= link_to 'New lesson', new_instructor_section_lesson_path(current_course), class: 'float-right btn btn-primary btn-sm' %> 
+         <%= section.title %>
+        <%= link_to 'New Lesson', new_instructor_section_lesson_path(section), class: 'float-right btn btn-primary btn-sm' %>
+        <br class="clr" />
         <ul>
         	<% section.lessons.each do |lesson|%>
         	<li>
