--- a/app/views/instructor/lessons/new.html.erb
+++ b/app/views/instructor/lessons/new.html.erb
@@ -1,6 +1,8 @@
 <br />
-<div class="booyah-box col-10 offset1"
+<div class="booyah-box col-10 offset1">
+<br />
 <h1> Add a lesson </h1>
+<br />
  <%= simple_form_for @lesson, url: instructor_section_lessons_path(current_section) do |f| %>
  <%= f.input :title %>
  <%= f.input :subtitle %>
