--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -3,6 +3,7 @@
 <div class="booyah-box col-10 offset-1">
 
 <h1> <%= @course.title %> </h1>
+<br />
 <img src="<%= @course.image.url %>">
 <br />
 <div class="row">
@@ -15,7 +16,6 @@
 
 <br />
 <br />
-
 <%= link_to "Administer", instructor_course_path(@course), class: 'btn btn-danger btn-large' %>
 <% end %>
 </div> 
@@ -25,20 +25,29 @@
 </div> 
 </div>
 
-<div class="col-2">
+<br />
+
+<div class="col-12">
 	<% @course.sections.each do |section| %>
-		<div class="section">
-		<%= section.title %>
+    <br /><br />
+	<div class="section">
+    <h3>
+	<%= section.title %>
+    </h3>
+    <div class ='row'>
 		<% section.lessons.each do |lesson| %>
-    <div class="lesson">
+        <div class="lessons text-center">
+            <br />
     	<%= link_to lesson_path(lesson) do %>
     <b><%= lesson.title %></b>
-    -
+    <br />
     <%= lesson.subtitle %>
     <% end %> 
-</div>
+    </div>
     <% end %> 
-	</div>
+</div>
+<br class= 'clear'/>
+</div>
 	<% end %>
 </div>
 </div>
