--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -58,7 +58,8 @@
 	<%= section.title %>
     </h3>
     <div class ='row'>
-		<% section.lessons.each do |lesson| %>
+    <% section.lessons.rank(:row_order).each do |lesson| %>
+     
         <div class="lessons text-center">
             <br />
     	<%= link_to lesson_path(lesson) do %>
@@ -74,6 +75,7 @@
 	<% end %>
 </div>
 </div>
+
 
 
 
