--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -52,7 +52,7 @@
 <br />
 
 <div class="col-12"
-	<% @course.sections.each do |section| %>
+	<% @course.sections.rank(:row_order).each do |section| %>
   <li>
     <br /><br />
 	<div class="section">
@@ -69,6 +69,7 @@
    <b><%= lesson.title %></b> 
     <br />
     <%= lesson.subtitle %>
+    
   </li>
     <% end %> 
     </div>
