--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -23,7 +23,7 @@
 	 	<%= link_to 'Add new section...', new_instructor_course_section_path(current_course), class: 'btn btn-primary btn-large' %>
 	 </div>
 	  <ul>
-    <% current_course.sections.each do |section| %>
+    <% current_course.sections.rank(:row_order).each do |section| %>
       <li>
         <%= section.title %>
          <%= section.title %>
@@ -31,7 +31,7 @@
         <%= link_to 'New Lesson', new_instructor_section_lesson_path(section), class: 'float-right btn btn-primary btn-sm' %>
         <br class="clr" />
           <ul class="lessons">
-        	<% section.lessons.rank(:row_order).each do |lesson|%>
+        <% section.lessons.rank(:row_order).each do |lesson| %>
             <li data-update-url="<%= instructor_lesson_path(lesson) %>">
         	<li>
         		<b> <%= lesson.title %></b>
