--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,9 @@
 
   <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
     <ul class="navbar-nav mr-auto mt-2 mt-md-0">
-    <li class="nav-item">
+         <li class="nav-item">
+<%= link_to 'My Dashboard', dashboard_path, class:'nav-link'%>
+ <li class="nav-item">
       <%= link_to 'See All Courses', courses_path, class: 'nav-link' %> 
     </li>
     </ul>
