--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -41,7 +41,7 @@
 
   <ul class="sections">
     <% current_course.sections.rank(:row_order).each do |section| %>
-      <li data-update-url="<%= instructor_section_path section %>" class="section-li">
+      <li data-update-url="<%= instructor_section_path (section) %>" class="section-li">
         <div class="header float-left">
           <span class="fa fa-ellipsis-v"></span>
           <%= section.title %>
@@ -78,9 +78,7 @@
 
 </div>
 
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#newSectionModal">
-  Add new section...
+
 </button>
 <!-- Modal -->
 <div class="modal fade" id="newSectionModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
