--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,4 +1,6 @@
 @import "bootstrap";
+@import "font-awesome-sprockets";
+@import "font-awesome";
 
 .navbar {
 	
@@ -42,7 +44,8 @@ h1, h2, h3, h4, h5, h6, .navbar {
 }
 
 .btn {
-  border-radius: 0;
+ border-radius: 8px;
+
 }
 
 .feature {
@@ -67,6 +70,7 @@ body {
   padding: 10px;
   padding-left: 5%;
   padding-right: 5%;
+  font-family: "Helvetica Neue", Helvetica;
    
 
 }
@@ -99,9 +103,12 @@ color: #c9188e
 }
 
 .section {
+
+  
   border: 1px solid;
   border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
   padding: 20px;
+  font-family: "Helvetica Neue", Helvetica;
 }
 
 .lesson  a b {
@@ -118,8 +125,11 @@ ul {
 .section-li {
   border: 1px solid;
   border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
-  font-size: 15px;
+  font-size: 25px;
   margin: 20px;
+  color: black;
+  
+
 }
 
 .lessons li b {
@@ -145,3 +155,14 @@ ul {
   
   font-size: 50px;
 }
+
+.fa {
+  color: white;
+}
+
+.fas {
+  
+  size: 3x;
+}
+
+
