--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -40,15 +40,19 @@
   </div>
 
   <ul class="sections">
+    <br />
+    <br />
     <% current_course.sections.rank(:row_order).each do |section| %>
       <li data-update-url="<%= instructor_section_path (section) %>" class="section-li">
         <div class="header float-left">
-          <span class="fa fa-ellipsis-v"></span>
+          <i class="fas fa-ellipsis-v"></i>
           <%= section.title %>
         </div>
         <%= link_to 'New Lesson', new_instructor_section_lesson_path(section), class: 'float-right btn btn-primary btn-sm' %>
         <br class="clr" />
         <br class="clr" />
+
+        <hr>
 
         <ul class="lessons">
           <% section.lessons.rank(:row_order).each do |lesson| %>
@@ -56,7 +60,7 @@
               <div class="row">
                 <div class="col-1">
                   <br />
-                  <span class="fa fa-ellipsis-v"></span>
+                <i class="fas fa-ellipsis-v"></i>
                 </div>
                 <div class="col-11 text-center">
                   <p>
