--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -64,13 +64,14 @@ body {
   -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
   -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
   box-shadow: 1px 1px 2px 0 #d0d0d0;
-  background: #fff;
+  background: #f9f9f9;
   border: 1px solid #ccc;
   border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
   padding: 10px;
   padding-left: 5%;
   padding-right: 5%;
   font-family: "Helvetica Neue", Helvetica;
+
    
 
 }
@@ -163,6 +164,9 @@ ul {
 .fas {
   
   size: 3x;
-}
+  }
 
+.align {
+  text-align: justify;
+}
 
