editing css for the images to center them across the platform

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -9,7 +9,7 @@
 <h1> <%= @course.title %> </h1>
 <hr>
 <br />
-<img src="<%= @course.image.url %>">
+<img src="<%= @course.image.url %>" class="center">
 <br />
 <br />
 <div class="row">
