--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -166,7 +166,13 @@ ul {
   size: 3x;
   }
 
-.align {
-  text-align: justify;
+.courseimage {
+  align: center;
 }
 
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
