--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -9,7 +9,7 @@
 	<%= link_to course.title, course_path(course)%>		
 	</h3>
 	<br />
-	<img src="<%= course.image.url %>">
+	<img src="<%= course.image.url %>" class="center">
 	<br />
 	<div class="row">
 	<div class="col-12 col-sm-8">
@@ -26,13 +26,15 @@
 	<%end%>
 
 	<h1> What I'm Teaching </h1>
+	<br />
+	<br />
 	<% current_user.courses.each do |course| %> 
 	<h3 class="text-center"> 
 		<%= link_to course.title, course_path(course) %>
 	</h3>
 	<br />
 
-	<img src="<%= course.image.url %>">
+	<img src="<%= course.image.url %>" class="center">
 	  <div class="row">
 	  	<br />
     <div class="col-12 col-sm-8">
