--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -32,7 +32,8 @@
   <br />
   <h1 class="text-center"><%= current_course.title %></h1>
  
-  <img src="<%= current_course.image.url %>">
+  <img src="<%= current_course.image.url %>" class="center">
+
 
   <br />
   <br />
@@ -45,7 +46,6 @@
   </div>
 
   <ul class="sections">
-    <br />
     <br />
     <% current_course.sections.rank(:row_order).each do |section| %>
       <li data-update-url="<%= instructor_section_path (section) %>" class="section-li">
