--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,9 +57,42 @@
 
     <div id="footer">
       <div class="container">
+        <div class="row">
+      <div class="col-12 col-sm-3">
         <b>Teachers</b>
         <br />
-        <%= link_to 'Teach a course', new_instructor_course_path %>
+        <%= link_to 'Teach a Course', new_instructor_course_path %>
+        <br />
+        <%= link_to 'My Dashboard', dashboard_path %>
+      </div>
+      <div class="col-12 col-sm-3">
+        <b>About</b>
+        <br />
+        <%= link_to 'Team', '#' %>
+        <br />
+        <%= link_to 'Careers', '#' %>
+        <br />
+        <%= link_to 'Privacy Policy', '#' %>
+      </div>
+      <div class="col-12 col-sm-3">
+        <b>Contact</b>
+        <br />
+       placeholderemail.@email.com
+        <br />
+       
+        <br />
+        
+      </div>
+      <div class="col-12 col-sm-3 social">
+        <b>Social</b>
+          <%= link_to 'http://github.com/danniedanniedannie' do %>
+          <i class="fab fa-github"></i>
+          <%end%>
+          <i class="fab fa-facebook"></i>
+          <i class="fab fa-twitter"></i>
+          <i class="fab fa-instagram"></i>
+      </div>
+    </div>
       </div>
     </div>
         <script src="http://vjs.zencdn.net/5.12.6/video.js"></script>
