--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -3,9 +3,9 @@
   <div class="frosty col-10 offset-1 text-center">
   	 <br />
      <div class="slidetext">
-    <h1>Learn Magic from the Pros</h1>
+    <h1>Learn Coding Magic from the Pros</h1>
     <br />
-    <h2>I'm an illusionist, Michael.</h2>
+    <h2> HTML, Javascript, Ruby and so many more</h2>
     <br />
   </div>
  
