--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -9,7 +9,7 @@
     <br />
   </div>
  
-    <%= link_to 'Learn More', courses_path, class: 'btn btn-success' %>
+    <%= link_to 'Learn More', courses_path, class: 'btn btn-primary' %>
     <br /><br />
   </div>
 </div>
